[project]
name = "quest-teleop-mujoco"
version = "0.1.0"
description = "VR hand-tracking teleoperation for MuJoCo simulation and real robot arms."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.4.0",
    "numpy>=2.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
