<?xml version="1.0"?>
<package format="3">
  <name>dex_hand_control</name>
  <version>0.0.1</version>
  <description>Dex hand qpos socket controller bridge.</description>
  <maintainer email="xwen@example.com">xwen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
