<?xml version="1.0"?>
<package format="3">
  <name>rm65_dex_description</name>
  <version>0.0.1</version>
  <description>RM65-B-V plus dex hand robot description placeholders.</description>
  <maintainer email="xwen@example.com">xwen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rm_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
